# esp-ethernet-web-server

./: CMakeCache.txt  CMakeLists.txt  ESP_4221_api.postman_collection.json  partitions.csv  sdkconfig  sdkconfig.old
components/ethernet_init/: ethernet_init.c  ethernet_init.h
components/global_status/: CMakeLists.txt  global_status.cpp  global_status.h  task_config.h
components/j4210u-driver_esp5.3/: CMakeLists.txt
components/j4210u-driver_esp5.3/include/: 903driver.h  910driver.h  common.h  driver.h  dtypes.h  hal-serial.h  platform.h
components/j4210u-driver_esp5.3/src/: 903driver.cpp  910driver.cpp  common.cpp  driver.cpp  hal-serial.cpp  main.cpp
components/messaging/: CMakeLists.txt  http_message.cpp  http_message.h
components/models_tasks/: CMakeLists.txt
components/models_tasks/messaging/: socket_message.cpp
components/models_tasks/settings_model/: settings.h
components/models_tasks/settings_model/src/: settings.cpp
components/models_tasks/uhf_operations/include/: scan_task.h  tag_memory_ops.h
components/models_tasks/uhf_operations/src/: helper_formatter.cpp  helper_func.cpp  scan_task.cpp  tag_memory_ops.cpp
components/peripheral_helper/: CMakeLists.txt  Kconfig.projbuild
components/peripheral_helper/ethernet_init/: ethernet_init.c
components/peripheral_helper/sdmmc/: sdmmc_helper.c  sdmmc_helper.h
components/scan/: CMakeLists.txt  scan_task.cpp  scan_task.h
components/scan_task/: CMakeLists.txt  helper_formatter.cpp  helper_func.cpp  scan_task.cpp
components/scan_task/include/: helper_func.h  scan_task.h
components/settings/: settings.cpp  settings.h
components/settings_model/: CMakeLists.txt  settings.cpp  settings.h  settings_nvs.cpp
components/settings_model/src/: settings.cpp  settings_helper.cpp  settings_nvs.cpp
components/uhf_operations/: CMakeLists.txt  scan_task.cpp  tag_memory_ops.cpp
components/uhf_operations/include/: helper_func.h  scan_task.h  tag_memory_ops.h
components/views/: CMakeLists.txt  api_json.h
components/views/api/: api_json.c
components/views/api_info_view/: api_json.c
components/views/include/: api_json.h
components/views/scan_view/: memory_view.cpp  scan_view.cpp
components/views/settings/: settings.c
components/views/settings_view/: settings.c  settings_view.c
main/: CMakeLists.txt  app_main.cpp  ethernet_example_main.cpp  server.c  server.h
main/html/: index.html
main/html/assets/scripts/: app.js
main/html/assets/styles/: style.css
