idf_component_register(SRCS "ethernet_example_main.cpp" "server.c"
                       INCLUDE_DIRS "."
                       EMBED_FILES "html/index.html"
                                   "html/assets/styles/style.css"
                                   "html/assets/scripts/app.js"
                                   "html/assets/images/favicon.ico")

